Fixing alignment for mobile toggle + core mobile page fix (#247)
* mobile updates

* fix mobile bottom white space

* new mobile toggle bar

* aligning togge menu

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -972,16 +972,23 @@ img.footer-sub-logo {
   width: 100%;
 
   #pillars-mobile-container {
-    display: inline-block;
     text-align: center;
     min-width: 320px;
     font-family: "Gotham-Rounded";
 
+    .add-padding-right{
+      padding-right: 7%;
+    }
+
+    .add-padding-left{
+      padding-left: 6%;
+    }
+
     .mobile-header-items {
-      position: relative;
-      float: left;
       color: $mobile-header-color-black;
-      padding: 10px 15px;
+      padding: 10px 0;
+      margin-left: 2%;
+      margin-right: 2%;
       cursor: pointer;
       font-size: 18px;
       font-family: "Gotham-Rounded";
@@ -1017,7 +1024,7 @@ img.footer-sub-logo {
 .mobile-pillar-bar {
   width: 100%;
 	height: 4px;
-  margin-top: -9px;
+  margin-top: -4px;
   margin-bottom: 10px;
 	background-color: $mobile-pillar-b-background;
   box-shadow: inset 0px 1px 1px rgba(0,0,0,0.2);
@@ -1097,6 +1104,13 @@ img.footer-sub-logo {
      margin-bottom: 10px;
      text-align: center;
 
+     padding-left: 20px;
+     padding-right: 20px;
+
+     h4 {
+       font-size: 18px;
+     }
+
      .snippet-bubble-text {
       font-size: 14px;
       text-align: center;
@@ -1107,7 +1121,11 @@ img.footer-sub-logo {
 
    #code-snippet {
      font-size: 12px;
-     width: 90%;
+     width: 100%;
+
+     h4 {
+       font-size: 18px;
+     }
    }
 
    .header-info {
@@ -1361,6 +1379,12 @@ img.footer-sub-logo {
 
 .desktop-module-text {
   margin: 20px -50px 20px 50;
+}
+
+#module-icon {
+  filter: grayscale(100%);
+  height: 100px;
+  width: 100px;
 }
 
 #desktop-modules-header {
